name:                commonmark-ast
version:             0.1.0.0
synopsis:            AST definitions used in the commonmark family of packages.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          co@zudov.me
copyright:           (c) Konstantin Zudov, 2014, 2015, 2016
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Text.CommonMark.Syntax
                       Text.CommonMark.Syntax.Builder
  -- other-modules:
  other-extensions:    DeriveDataTypeable
                       DeriveGeneric
  build-depends:       base >=4.7 && <5.0
                     , containers
                     , deepseq
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall
