name:                commonmark-html
version:             0.1.0.0
synopsis:            CommonMark's AST defenition
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          konstantin@anche.no
copyright:           (c) Konstantin Zudov, 2014
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Text.CommonMark.Html
  other-extensions:    DeriveDataTypeable
                       DeriveGeneric
  build-depends:       base >=4.7 && < 5
                     , text
                     , commonmark-ast
                     , transformers
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite test
    hs-source-dirs:    tests/
    main-is:           Main.hs
    type:              exitcode-stdio-1.0
    ghc-options:       -Wall
    build-depends:     base >= 4.7 && < 5
                     , commonmark-html
                     , commonmark-testutils
                     , hspec
    default-language:    Haskell2010

benchmark progit-bench
    type:              exitcode-stdio-1.0
    hs-source-dirs:    bench/
    main-is:           ProGit.hs
    build-depends:     base >= 4.7 && <5
                     , criterion
                     , text
                     , commonmark-html
                     , commonmark-ast
                     , commonmark-testutils
                     , cmark >= 0.3.2
                     , deepseq
    default-language:  Haskell2010
    ghc-options:       -O2

flag profile
    Description:     Build profiling executables
    Default:         False

executable commonmark-html-profile
    hs-source-dirs:    prof
    main-is:           Main.hs
    default-language:  Haskell2010
    ghc-options:
      -Wall
      -O2
      -threaded
      -fprof-auto
      "-with-rtsopts=-N -p -s -h -i0.1"
    if flag(profile)
        buildable: True
        build-depends:     base >= 4.7 && < 5
                         , text
                         , commonmark-html
                         , commonmark-ast
                         , commonmark-testutils
                         , deepseq
                         , cmark
    else
        buildable: False
