name:                commonmark-parser
version:             0.1.0.0
synopsis:            The parser of the commonmark family of packages.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          co@zudov.me
copyright:           (c) Konstantin Zudov, 2014, 2015, 2016
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
                       extended/
  exposed-modules:     Text.Commonmark.Parser
                       Text.Commonmark.Parser.Options
                       Text.Commonmark.Parser.Inline
  other-modules:       Text.Html.Email.Validate
                       Text.Commonmark.Types
                       Text.Commonmark.Parser.Util
                       Text.Commonmark.ParserCombinators
                       Data.Char.Extended
                       Data.Text.Extended
  other-extensions:    OverloadedStrings
                       TupleSections
                       TupleSections
                       ViewPatterns
                       OverloadedStrings
                       LambdaCase
                       RecordWildCards
  build-depends:       base >=4.7
                     , text
                     , html5-entity  >= 0.2.0.1
                     , control-bool
                     , containers
                     , transformers
                     , commonmark-ast
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded

test-suite test
    hs-source-dirs:    tests/
    main-is:           Main.hs
    other-modules:     Inline
    type:              exitcode-stdio-1.0
    ghc-options:       -Wall
    build-depends:     base >= 4.7
                     , hspec
                     , text
                     , syb
                     , QuickCheck
                     , deepseq
                     , containers
                     , commonmark-parser
                     , commonmark-ast
                     , commonmark-testutils
                     , cmark
    default-language:    Haskell2010

benchmark bench
    type:              exitcode-stdio-1.0
    hs-source-dirs:    bench/
    main-is:           Main.hs
    build-depends:     base >= 4.7 && <5
                     , criterion
                     , text
                     , commonmark-ast
                     , commonmark-testutils
                     , commonmark-parser
                     , deepseq
                     , file-embed
    default-language:  Haskell2010
    ghc-options:       -O2
