name:                commonmark-testutils
version:             0.1.0.0
synopsis:            Some utilities for testing commonmark family of packages
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          konstantin@anche.no
copyright:           (c) Konstantin Zudov, 2014
category:            Text
build-type:          Simple
cabal-version:       >=1.10
Extra-source-files:  README.md 
Data-Files:          spec.json

library
  exposed-modules:     Text.CommonMark.TestUtils.CMark
                       Text.CommonMark.TestUtils.Spec
  other-modules:       Text.CommonMark.TestUtils.Spec.TH
                       Paths_commonmark_testutils
  other-extensions:    TemplateHaskell
                       OverloadedStrings
                       FlexibleInstances
  build-depends:       base               >=4.7 && <4.9
                     , containers
                     , text
                     , cmark              >= 0.3.4
                     , aeson
                     , bytestring
                     , template-haskell
                     , commonmark-ast
                     , file-embed

  hs-source-dirs:      src/
  ghc-options:         -Wall
  default-language:    Haskell2010
