name:                commonmark-testutils
version:             0.1.0.0
synopsis:            Some utilities for testing commonmark family of packages.
description:         see README.md
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          co@zudov.me
copyright:           (c) Konstantin Zudov, 2014, 2015, 2016
category:            Text
build-type:          Simple
cabal-version:       >=1.10
Extra-source-files:  README.md 
Data-Files:          spec.json

library
  exposed-modules:     Text.Commonmark.TestUtils.CMark
                       Text.Commonmark.TestUtils.Spec
  other-modules:       Blocks
                       Text.Commonmark.TestUtils.Spec.TH
                       Paths_commonmark_testutils
  other-extensions:    TemplateHaskell
                       OverloadedStrings
                       FlexibleInstances
  build-depends:       base               >=4.7 && <5.0
                     , containers
                     , text
                     , cmark              >= 0.4.0.1
                     , aeson
                     , bytestring
                     , template-haskell
                     , commonmark-ast
                     , file-embed

  hs-source-dirs:      src/
  ghc-options:         -Wall
  default-language:    Haskell2010
