name:                commonmark
version:             0.1.0.0
synopsis:            Commonmark processing in pure haskell.
description:         See https://github.com/zudov/haskell-commonmark#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          co@zudov.me
copyright:           (c) Konstantin Zudov, 2014, 2015, 2016
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:    Text.Commonmark
  hs-source-dirs:     src
  build-depends:      base >=4.7 && <5
                    , text
                    , commonmark-ast
                    , commonmark-parser
                    , commonmark-html
  default-language:   Haskell2010
  ghc-options:        -Wall

executable commonmark-hs
  main-is:             Main.hs
  build-depends:       base >=4.7 && < 5
                     , text
                     , commonmark
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

